# AutoStories

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  explore.ipynb  pyproject.toml
.venv311/: pyvenv.cfg
src/autoshorts/adapters/: fake_story.py  reddit_praw.py
src/autoshorts/core/: analytics.py  broll.py  compositor.py  models.py  story.py  subtitles.py  tts.py  uploader.py
src/autoshorts/core/ai/: gemini_rewrite.py
tests/: test_fake_story.py  test_models.py
